--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
 	display: flex;
     flex-direction: row;
+    padding: 4rem;
 	height: 100vh;
     background-color: hsl(257, 40%, 49%);
     background-image: url('/images/bg-desktop.svg');
@@ -14,7 +15,14 @@ body {
 
 
 .left-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 50%;
+}
+
+.logo-icon {
+    width: 14rem;
 }
 .right-side {
     width: 50%;
