--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
 	display: flex;
-    flex-direction: row;
+    justify-content: center;
     padding: 4rem;
 	height: 100vh;
     background-color: hsl(257, 40%, 49%);
@@ -17,15 +17,43 @@ body {
 .left-side {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 50%;
+    justify-content: space-around;
+ 
+  
+}
+
+
+
+
+
+
+.right-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+width: 34rem;
+    padding: 4rem;
+    color: white;
+    
 }
 
 .logo-icon {
     width: 14rem;
 }
-.right-side {
-    width: 50%;
+
+.mockup-template{
+    width: 40rem;
+}
+
+h1 {
+    margin-bottom: 1rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+.description {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
 }
 
 footer {
