--- a/style.css
+++ b/style.css
@@ -54,6 +54,21 @@ h1 {
 .description {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.btn {
+    width: 9rem;
+    height: 2.5rem;
+    border-radius: 1.4rem;
+    border: none;
+    margin-right: auto;
+    margin-top: 1.2rem;
+    color: hsl(257, 40%, 49%);
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    cursor: pointer;
+
 }
 
 footer {
