--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 
 .right-side {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -68,8 +69,26 @@ h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     cursor: pointer;
+    box-shadow: 0px 13px 37px -5px rgba(66, 68, 90, 1);
 
 }
+
+.icons {
+    position: absolute;
+    bottom: 4rem;
+    right: 4rem;
+    
+}
+
+i {
+    width: 2rem;
+    height: 2rem;
+    border: 1px solid black;
+    border-radius: 50%;
+
+}
+
+
 
 footer {
     position: absolute;
