--- a/style.css
+++ b/style.css
@@ -6,93 +6,90 @@
 
 body {
 	display: flex;
-    justify-content: center;
-    padding: 4rem;
+	justify-content: center;
+	padding: 4rem;
 	height: 100vh;
-    background-color: hsl(257, 40%, 49%);
-    background-image: url('/images/bg-desktop.svg');
+	background-color: hsl(257, 40%, 49%);
+	background-image: url('/images/bg-desktop.svg');
 }
-
 
 .left-side {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
- 
-  
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
 
-
-
-
-
-
 .right-side {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-width: 34rem;
-    padding: 4rem;
-    color: white;
-    
+	display: flex;
+	position: relative;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 34rem;
+	padding: 4rem;
+	color: white;
 }
 
 .logo-icon {
-    width: 14rem;
+	width: 14rem;
 }
 
-.mockup-template{
-    width: 40rem;
+.mockup-template {
+	width: 40rem;
 }
 
 h1 {
-    margin-bottom: 1rem;
-    font-family: 'Poppins', sans-serif;
+	margin-bottom: 1rem;
+	font-family: 'Poppins', sans-serif;
 }
 
 .description {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
-    color: rgba(255, 255, 255, 0.7);
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	color: rgba(255, 255, 255, 0.7);
 }
 
 .btn {
-    width: 9rem;
-    height: 2.5rem;
-    border-radius: 1.4rem;
-    border: none;
-    margin-right: auto;
-    margin-top: 1.2rem;
-    color: hsl(257, 40%, 49%);
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    cursor: pointer;
-    box-shadow: 0px 13px 37px -5px rgba(66, 68, 90, 1);
-
+	width: 9rem;
+	height: 2.5rem;
+	border-radius: 1.4rem;
+	border: none;
+	margin-right: auto;
+	margin-top: 1.2rem;
+	color: hsl(257, 40%, 49%);
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 400;
+	cursor: pointer;
+	box-shadow: 0px 13px 37px -5px rgba(66, 68, 90, 1);
 }
 
 .icons {
-    position: absolute;
-    bottom: 4rem;
-    right: 4rem;
-    
-}
 
-i {
-    width: 2rem;
-    height: 2rem;
-    border: 1px solid black;
-    border-radius: 50%;
-
+	position: absolute;
+    display: flex;
+    justify-content: space-between;
+    width: 7rem;
+	bottom: 4rem;
+	right: 4rem;
 }
 
 
+
+.fa-brands {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 30px;
+	height: 30px;
+	border: 1px solid rgb(255, 255, 255);
+	border-radius: 50%;
+	cursor: pointer;
+	transition: background-color 0.3s, color 0.3s;
+}
 
 footer {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	bottom: 0;
 }
