--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ h1 {
 	font-weight: 400;
 	cursor: pointer;
 	box-shadow: 0px 13px 37px -5px rgba(66, 68, 90, 1);
+    transition: color 0.3s, background-color 0.3s ;
 }
 
 .icons {
@@ -68,7 +69,7 @@ h1 {
 	position: absolute;
     display: flex;
     justify-content: space-between;
-    width: 7rem;
+    width: 8rem;
 	bottom: 4rem;
 	right: 4rem;
 }
@@ -79,12 +80,23 @@ h1 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 30px;
-	height: 30px;
+	width: 33px;
+	height: 33px;
 	border: 1px solid rgb(255, 255, 255);
 	border-radius: 50%;
 	cursor: pointer;
-	transition: background-color 0.3s, color 0.3s;
+	transition:  color 0.3s, border 0.3s;
+    cursor: pointer;
+}
+
+.fa-brands:hover {
+	color: hsl(300, 69%, 71%);
+    border: 1px solid hsl(300, 69%, 71%);
+}
+
+.btn:hover {
+    background-color: hsl(300, 69%, 71%);
+    color: white;
 }
 
 footer {
