--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ footer {
         width: 100%;
         height: 50%;
         padding: 0;
+        margin-bottom: 8rem;
         
     }
     h1 {
@@ -155,5 +156,16 @@ footer {
         margin-left: auto;
     }
 
-    
+    .icons {
+        bottom: -4rem;
+        left: 50%;
+        transform: translateX(-50%);
+
+    }
+
+    footer {
+        visibility: hidden;
+    }
+
+
 }
